[metadata]
name = lying
description = run a fake terminal
url = https://github.com/axju/lying
author = axju
author_email = axel.juraske@short-report.de
license = MIT
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tox:tox]
envlist = py36, py37, py38, flake8, pylint
skipt_missing_interpreters = True

[testenv]
deps = coverage
commands = coverage run --source lying setup.py test
           coverage report --fail-under=50

[testenv:flake8]
deps = flake8
commands = flake8 lying

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg lying

[flake8]
max-line-length = 160

[pylint]
disable = C0114, C0115, C0116, R0903, W0102
max-line-length = 160
